anpassungen an freigabe und wizard

--- a/trunk/basement/templates/default/wizard-show.tem.html
+++ b/trunk/basement/templates/default/wizard-show.tem.html
@@ -63,7 +63,7 @@
         <form method="post" action="!#ausgaben_form_aktion">
             <button type="button" onclick="preview();" class="button">g(preview)</button>
             <button type="submit" name="send[]" value="save" class="button">g(save)</button>
-            <button type="submit" name="send[]" value="version" class="button">g(versioning)</button>
+            <button type="submit" name="send[]" value="version" class="button">g(version)</button>
             <button type="submit" name="send[]" value="cancel" class="button">g(abort)</button>
         </form>
     </fieldset>
@@ -85,7 +85,7 @@
         <form method="post" action="!#ausgaben_form_aktion">
             <button type="button" onclick="preview();" class="button">g(preview)</button>
             <button type="submit" name="send[]" value="save" class="button">g(save)</button>
-            <button type="submit" name="send[]" value="version" class="button">g(versioning)</button>
+            <button type="submit" name="send[]" value="version" class="button">g(version)</button>
             <button type="submit" name="send[]" value="cancel" class="button">g(abort)</button>
             <label class="cbra"><input type="checkbox" name="release_mark" value="-1" class="button" />#(release)</label>
         </form>
