bugfixing, anpassung an postgres

--- a/trunk/basement/templates/default/wizard-add.tem.html
+++ b/trunk/basement/templates/default/wizard-add.tem.html
@@ -53,6 +53,7 @@
                     <input type="hidden" name="form_referer" value="!#ausgaben_form_referer" class="hidden" />
                     <input type="hidden" name="refid" value="!#ausgaben_refid" class="hidden" />
                     <input type="hidden" name="lang" value="de" class="hidden" />
+                    <input type="hidden" name="mandatory" value="" class="hidden" />
                     <button type="submit" name="send[]" value="g(send)" accesskey="s" class="button">g(send)</button>
                     <button type="button" name="cancel[]" value="g(abort)" accesskey="a" class="button" onclick="location='!#ausgaben_form_referer'">g(abort)</button>
                     <div class="clearer">&nbsp;</div>
