--- a/trunk/basement/templates/default/base.tem.html
+++ b/trunk/basement/templates/default/base.tem.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../css/default/lightbox.css" type="text/css" />
     <title>!#specialvars_pagetitle</title>
     <script src="../../js/default/prototype.js" type="text/javascript"></script>
-    <script src="../../js/default/scriptaculous.js?load=effects,dragdrop" type="text/javascript"></script>
+    <script src="../../js/default/scriptaculous.js?load=effects,dragdrop,builder" type="text/javascript"></script>
     <script src="../../js/default/lightbox.js" type="text/javascript"></script>
 </head>
 <body>
