--- a/trunk/basement/templates/default/wizard-show.tem.html
+++ b/trunk/basement/templates/default/wizard-show.tem.html
@@ -37,7 +37,7 @@
         <!--##loop-sort_content-->
         <li id="item_!{key}" class="!{class}" style="!{style}">
             <a name="item_!{key}"></a>
-            !{value}
+            !{value_html}
             <div class="clearer"></div>
             <p class="block_edit" !{modify}>
                 <a href="!{link_up}" class="button" title="#(wiz_moveup_desc)">#(wiz_moveup)</a>
