extended-feld in template eingefuegt

--- a/trunk/basement/templates/default/-555504947.edit-single.tem.html
+++ b/trunk/basement/templates/default/-555504947.edit-single.tem.html
@@ -25,6 +25,10 @@
         !#element_entry
         <label for="label">#(label)</label>
         !#element_label
+        <!--##hide-extend-->
+        <label for="extend">#(extend)</label>
+        !#element_extend
+        <!--##show-->
         <label for="label">#(exturl)</label>
         !#element_exturl
         <label for="lang">#(lang)</label>
