--- a/trunk/basement/templates/default/wizard-show.tem.html
+++ b/trunk/basement/templates/default/wizard-show.tem.html
@@ -62,9 +62,9 @@
     <fieldset class="buttons">
         <form method="post" action="!#ausgaben_form_aktion">
             <button type="button" onclick="preview();" class="button">g(preview)</button>
-            <button type="submit" name="send[]" value="save" class="button">g(save)</button>
-            <button type="submit" name="send[]" value="version" class="button">g(version)</button>
-            <button type="submit" name="send[]" value="cancel" class="button">g(abort)</button>
+            <button type="submit" name="save[]" value="save" class="button">g(save)</button>
+            <button type="submit" name="version[]" value="version" class="button">g(version)</button>
+            <button type="submit" name="cancel[]" value="cancel" class="button">g(abort)</button>
         </form>
     </fieldset>
     <!--##show-->
@@ -73,8 +73,8 @@
     <fieldset class="buttons">
         <form method="post" action="!#ausgaben_form_aktion">
             <button type="button" onclick="preview();" class="button">g(preview)</button>
-            <button type="submit" name="send[]" value="version" class="button">g(save)</button>
-            <button type="submit" name="send[]" value="cancel" class="button">g(abort)</button><br />
+            <button type="submit" name="version[]" value="version" class="button">g(save)</button>
+            <button type="submit" name="cancel[]" value="cancel" class="button">g(abort)</button><br />
             <label class="cbra"><input type="checkbox" name="release_mark" value="-1" class="button" />#(ask_release)</label>
         </form>
     </fieldset>
@@ -84,9 +84,9 @@
     <fieldset class="buttons">
         <form method="post" action="!#ausgaben_form_aktion">
             <button type="button" onclick="preview();" class="button">g(preview)</button>
-            <button type="submit" name="send[]" value="save" class="button">g(save)</button>
-            <button type="submit" name="send[]" value="version" class="button">g(version)</button>
-            <button type="submit" name="send[]" value="cancel" class="button">g(abort)</button>
+            <button type="submit" name="save[]" value="save" class="button">g(save)</button>
+            <button type="submit" name="version[]" value="version" class="button">g(version)</button>
+            <button type="submit" name="cancel[]" value="cancel" class="button">g(abort)</button>
             <label class="cbra"><input type="checkbox" name="release_mark" value="-1" class="button" />#(release)</label>
         </form>
     </fieldset>
