--- a/trunk/basement/templates/default/wizard-show.tem.html
+++ b/trunk/basement/templates/default/wizard-show.tem.html
@@ -125,7 +125,7 @@
                                         '!#ausgaben_form_aktion',
                                         {
                                             asynchronous:true,
-                                            parameters: 'ajax=on&send[]=save',
+                                            parameters: 'ajax=on&save[]=save',
                                             onSuccess:function(){
                                                 new Effect.Parallel(
                                                     [
