--- a/trunk/basement/templates/default/kontakt-email1.tem.html
+++ b/trunk/basement/templates/default/kontakt-email1.tem.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <!--$Id$-->
-<title>kontakt-email1</title>
+<title>kontakt-email1 (mail an betreiber)</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
 </head>
 <body>
@@ -17,6 +17,7 @@ PLZ, Ort:                       !{plz} !{ort}
 Telefon:                        !{telefon}
 Fax:                            !{fax}
 eMail Adresse:                  !{e-mail}
+zuletzt besuchte Seite:         !{last_viewed}
 
 Mitteilung:
 -----------
