--- a/trunk/basement/templates/default/kontakt.tem.html
+++ b/trunk/basement/templates/default/kontakt.tem.html
@@ -37,6 +37,13 @@
         !#element_e-mail
         <label for="mitteilung">g(mitteilung)</label>
         !#element_mitteilung
+        <label for="last_viewed">g(last_viewed)</label>
+        <input type="text" value="!#ausgaben_last_viewed" name="last_viewed" class="" maxlength="50" id="last_viewed"  readonly="true" />
+        <!--##hide-captcha-->
+        <label for="captcha"><img title="captcha" alt="captcha" src="!{url}" /></label>
+        <input type="text" value="" name="captcha" class="" id="captcha" />
+        <input name="captcha_proof" type="hidden" value="!{proof}" class="hidden" />
+        <!--##show-->
         <p>#(zusatz)</p>
         <input name="form_referer" type="hidden" value="!#ausgaben_form_referer" class="hidden" />
         <div class="clearer">&nbsp;</div>
